加入我们页面调试

--- a/src/assets/scss/utils/_text.scss
+++ b/src/assets/scss/utils/_text.scss
@@ -12,7 +12,7 @@
 
   // 多行省略
   @mixin erow($row: 2) {
-      @include css3(display, box);
+      @include css3(display, box, $prefix:false, $suffix:true);
       @include css3(box-orient, vertical);
       @include css3(line-clamp, $row);
       overflow: hidden;
