--- a/src/views/web/joinus.scss
+++ b/src/views/web/joinus.scss
@@ -38,7 +38,7 @@
   table{
     box-sizing: border-box;
     margin: auto;
-    border: 1px solid #d5d5d5;
+    border: 1px solid #e8e8e8;
     tr{
       color: #000000;
       font-size: 15px;
@@ -52,7 +52,7 @@
         height: 63px;
         text-align: left;
         cursor: pointer;
-        border-left: 1px solid #d5d5d5;
+        border-left: 1px solid #e8e8e8;
       }
       td:nth-child(1){
         border: none;
@@ -104,7 +104,7 @@
           letter-spacing: 0.9px;
         }
         .p2{
-          margin-top: 20px;
+          margin-top: 6px;
           font-size: 14px;
           color: #777777;
           letter-spacing: 0.5px;
@@ -113,7 +113,7 @@
           }
         }
         .a-link{
-          margin-top: 40px;
+          margin-top: 31px;
           font-size: 14px;
           letter-spacing: 0.5px;
           color: #777777;
@@ -189,7 +189,7 @@
   table{
     box-sizing: border-box;
     margin: auto;
-    border: 1px solid #d5d5d5;
+    border: 1px solid #e8e8e8;
     tr{
       color: #000000;
       font-size: 20px;
@@ -203,7 +203,7 @@
         height: 82px;
         text-align: left;
         cursor: pointer;
-        border-left: 1px solid #d5d5d5;
+        border-left: 1px solid #e8e8e8;
       }
       td:nth-child(1){
         border: none;
@@ -255,7 +255,7 @@
           letter-spacing: 1.2px;
         }
         .p2{
-          margin-top: 26px;
+          margin-top: 8px;
           font-size: 18px;
           color: #777777;
           letter-spacing: 0.5px;
@@ -264,7 +264,7 @@
           }
         }
         .a-link{
-          margin-top: 50px;
+          margin-top: 40px;
           font-size: 18px;
           letter-spacing: 0.5px;
           color: #777777;
