--- a/src/views/web/joinus.scss
+++ b/src/views/web/joinus.scss
@@ -4,29 +4,26 @@
   }
   .header{
     width: 100%;
-    height: 300px;
+    height: 250px;
     background-size: cover;
   }
   .join{
-    width: 890px;
-    height: 136px;
     text-align: center;
-    background-color: #ffffff;
     margin: auto;
-    margin-top: -136px;
+    margin-top: -174px;
     span{
       line-height: 46px;
       font-size: 46px;
-      color:#000000;
+      color:#ffffff;
       display: inline-block;
-      margin: 70px;
+      margin: 64px;
       letter-spacing: 2.3px;
     }
   }
 
   .p-tag{
-    margin-top: 39.5px;
-    margin-bottom: 71.5px;
+    margin-top: 61.5px;
+    margin-bottom: 50px;
     text-align: center;
     width: 100%;
     color: #000000;
@@ -162,29 +159,26 @@
   }
   .header{
     width: 100%;
-    height: 390.5px;
+    height: 325px;
     background-size: cover;
   }
   .join{
-    width: 1157px;
-    height: 178px;
     text-align: center;
-    background-color: #ffffff;
     margin: auto;
-    margin-top: -178px;
+    margin-top: -226px;
     span{
       line-height: 60px;
       font-size: 60px;
-      color:#000000;
+      color: #ffffff;
       display: inline-block;
-      margin: 90px;
+      margin: 83px;
       letter-spacing: 3px;
     }
   }
 
   .p-tag{
-    margin-top: 31.5px;
-    margin-bottom: 63.5px;
+    margin-top: 80px;
+    margin-bottom: 65px;
     text-align: center;
     width: 100%;
     color: #000000;
