--- a/src/views/web/joinus.scss
+++ b/src/views/web/joinus.scss
@@ -15,6 +15,7 @@
       line-height: 46px;
       font-size: 46px;
       color:#ffffff;
+      font-weight: 400;
       display: inline-block;
       margin: 64px;
       letter-spacing: 2.3px;
@@ -23,7 +24,7 @@
 
   .p-tag{
     margin-top: 61.5px;
-    margin-bottom: 50px;
+    margin-bottom: 61.5px;
     text-align: center;
     width: 100%;
     color: #000000;
@@ -170,6 +171,7 @@
       line-height: 60px;
       font-size: 60px;
       color: #ffffff;
+      font-weight: 400;
       display: inline-block;
       margin: 83px;
       letter-spacing: 3px;
@@ -178,7 +180,7 @@
 
   .p-tag{
     margin-top: 80px;
-    margin-bottom: 65px;
+    margin-bottom: 80px;
     text-align: center;
     width: 100%;
     color: #000000;
