--- a/src/assets/scss/_reset.scss
+++ b/src/assets/scss/_reset.scss
@@ -152,11 +152,21 @@
           }
       }
   }
+  // 适配pc端
+  @mixin pc($width){
+    $xs : 100px/(750px/640px);
+    @media (min-width:($width)){
+      html{
+        width: 640px!important;
+        font-size:$xs!important;
+      }
+    }
+  }
 
-  @include re(1440px);
-  @include re(1280px);
-  @include re(1024px);
-  @include re(961px);
+  @include pc(1440px);
+  @include pc(1280px);
+  @include pc(1024px);
+  @include pc(961px);
   @include re(960px);
   @include re(950px);
   @include re(900px);
