--- a/src/assets/scss/utils/_group.scss
+++ b/src/assets/scss/utils/_group.scss
@@ -1,6 +1,18 @@
   @charset "utf-8";
   // 混合缩写的混合宏(mixin);
 
+  // 适配pc端
+  @mixin pc($width){
+    $xs : 100px/(750px/640px);
+    @media (min-width:($width)){
+      html{
+        width: 640px!important;
+        font-size:$xs!important;
+        margin: auto;
+      }
+    }
+  }
+
   // 设置width & height & line-height;
   @mixin whl($width, $height, $line-height:$height) {
       @include w($width);
