--- a/src/assets/scss/_reset.scss
+++ b/src/assets/scss/_reset.scss
@@ -113,6 +113,13 @@
       vertical-align: middle;
   }
 
+  .icon {
+    width: 1em; height: 1em;
+    vertical-align: -0.15em;
+    fill: currentColor;
+    overflow: hidden;
+  }
+
 /* 响应式断点
   * example
   * @include breakpoint(large) {
