--- a/src/assets/scss/_config.scss
+++ b/src/assets/scss/_config.scss
@@ -16,11 +16,12 @@
   $subColor: #777;
 
   $darkBlue: #0848d1;
-  $cambridgeBlue: #1970ce;
+  $linkBlue: #1970ce;
 
   $mallRed: #d60a07;
 
   $borderColor: #e8e8e8;
+  $intervalColor: #f5f5f5;
 
   $titleColor: rgba(50, 50, 50, 1);
   $textColor: rgba(128, 128, 128, 1);
