--- a/src/assets/scss/utils/_css3.scss
+++ b/src/assets/scss/utils/_css3.scss
@@ -177,7 +177,7 @@
   // 例子 :                                                                //
   //  @include scrollbar(scrollbar-track){                                 //
   //    #{$browser}box-shadow: inset 0 0 6px rgba(0,0,0,0.3);              //
-  //    background-color: #F5F5F5;                                         //
+  //    background-color: #f5f5f5;                                         //
   //  };                                                                   //
   //  @include scrollbar(scrollbar){                                       //
   //    width: 12px;                                                       //
