--- a/src/assets/scss/utils/_group.scss
+++ b/src/assets/scss/utils/_group.scss
@@ -9,6 +9,7 @@
         width: 640px!important;
         font-size:$xs!important;
         margin: auto;
+        background-color: #f1f1f1;
       }
     }
   }
