--- a/src/assets/scss/_config.scss
+++ b/src/assets/scss/_config.scss
@@ -15,8 +15,8 @@
   $themeColor: #444;
   $subColor: #777;
 
-  $darkBlue: #0848d1;
-  $linkBlue: #1970ce;
+  $darkBlue: rgba(0, 114, 221, 1);
+  $linkBlue: #0072dd;
 
   $mallRed: #d60a07;
 
