--- a/src/assets/scss/_config.scss
+++ b/src/assets/scss/_config.scss
@@ -20,6 +20,7 @@
 
   $mallRed: #d60a07;
 
+  $buttonColor: #bbd6ef;
   $borderColor: #e8e8e8;
   $intervalColor: #f5f5f5;
 
@@ -36,3 +37,21 @@
   $comPad: 40;
 
   // borderRadius
+
+  /* iphoneX适配 */
+  @media only screen and (device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) {
+      @supports(bottom: constant(safe-area-inset-bottom)) or (bottom:env(safe-area-inset-bottom)) {
+          .lh-footer {
+              padding-bottom: constant(safe-area-inset-bottom)!important;
+              padding-bottom: env(safe-area-inset-bottom)!important;
+          }
+          .Xcontainer {
+            padding-bottom: calc(1rem + constant(safe-area-inset-bottom)!important);
+            padding-bottom: calc(1rem + env(safe-area-inset-bottom)!important);
+          }
+          .XXcontainer {
+            padding-bottom: calc(1.08rem + constant(safe-area-inset-bottom)!important);
+            padding-bottom: calc(1.08rem + env(safe-area-inset-bottom)!important);
+          }
+      }
+  }
