背景色调整

--- a/src/assets/scss/utils/_group.scss
+++ b/src/assets/scss/utils/_group.scss
@@ -8,6 +8,7 @@
       html{
         width: 640px!important;
         font-size:$xs!important;
+        background-color: $intervalColor;
         margin: auto;
       }
     }
