官网图标替换

--- a/src/assets/scss/_reset.scss
+++ b/src/assets/scss/_reset.scss
@@ -120,6 +120,10 @@
     overflow: hidden;
   }
 
+  #app > .website {
+    background-color: #fff;
+  }
+
 /* 响应式断点
   * example
   * @include breakpoint(large) {
