--- a/src/views/mobile/Mall/shopping/shopList.scss
+++ b/src/views/mobile/Mall/shopping/shopList.scss
@@ -31,7 +31,7 @@
       }
       input {
         width: 5.3rem;
-        height: 0.6rem;
+        // height: 0.6rem;
         padding: 0;
         font-size:0.3rem;
         line-height: 0.6rem;
@@ -41,25 +41,25 @@
         &::-webkit-input-placeholder {
           font-size: 0.28rem;
           font-weight: 300;
-          line-height: 0.56rem;
+          line-height: 0.6rem;
           color: #888;
         }
         &:-moz-placeholder{
           font-size: 0.28rem;
           font-weight: 300;
-          line-height: 0.56rem;
+          line-height: 0.6rem;
           color: #888;
         }
         &::-moz-placeholder{
           font-size: 0.28rem;
           font-weight: 300;
-          line-height: 0.56rem;
+          line-height: 0.6rem;
           color: #888;
         }
         &:-ms-input-placeholder{
           font-size: 0.28rem;
           font-weight: 300;
-          line-height: 0.56rem;
+          line-height: 0.6rem;
           color: #888;
         }
       }
