--- a/src/views/mobile/Mall/shopping/shopList.scss
+++ b/src/views/mobile/Mall/shopping/shopList.scss
@@ -32,9 +32,9 @@
       input {
         width: 5.3rem;
         // height: 0.6rem;
-        padding: 0;
+        padding: 0.1rem 0;
         font-size:0.3rem;
-        line-height: 0.6rem;
+        line-height: 0.3rem;
         outline: none;
         border: none;
         background-color:#f1f2f3;
