--- a/src/views/mobile/Mall/shopping/shopList.scss
+++ b/src/views/mobile/Mall/shopping/shopList.scss
@@ -97,7 +97,8 @@
       // border-bottom: 2px solid #444444;
       .botline{
         display: block;
-        width: 80%;
+        width: calc(100% - 8px);
+        // width: 80%;
         padding: 0.1rem 0;
         border-bottom: 2px solid #444;
         margin: auto;
