--- a/src/views/mobile/Mall/shopping/shopList.scss
+++ b/src/views/mobile/Mall/shopping/shopList.scss
@@ -146,6 +146,10 @@
           line-height: 0.26rem;
           font-weight: 300;
           color: $themeColor;
+          
+          white-space: nowrap;
+          text-overflow: ellipsis;
+          overflow: hidden;
         }
         .lanehub{
           border-radius: 2px;
@@ -162,6 +166,10 @@
           margin-bottom: 0.14rem;
           font-weight: normal;
           color: $themeColor;
+
+          white-space: nowrap;
+          text-overflow: ellipsis;
+          overflow: hidden;
         }
         .value{
           margin-bottom: 0.12rem;
