--- a/src/views/mobile/Mall/shopping/shopList.scss
+++ b/src/views/mobile/Mall/shopping/shopList.scss
@@ -161,7 +161,7 @@
         }
         .desc-title{
           font-size: 0.28rem;
-          // line-height: 0.28rem;
+          line-height: 0.28rem;
           margin-top: 0.1rem;
           margin-bottom: 0.14rem;
           font-weight: normal;
