--- a/src/assets/scss/component/_richtext.scss
+++ b/src/assets/scss/component/_richtext.scss
@@ -34,6 +34,9 @@
       line-height: 0.38rem;
       color:#999;
     }
+    a {
+      font-size: 16px;
+    }
     .customvideo {
       padding-bottom: .3rem;
     }
