--- a/src/assets/scss/utils/_border.scss
+++ b/src/assets/scss/utils/_border.scss
@@ -130,3 +130,20 @@
           content: "/\00a0";
       }
   }
+
+  // 细边框
+  @mixin thin-line($borderColor, $borderRadius) {
+    position: relative;
+    &:after{
+      content: '';
+      position: absolute;
+      top: 0; left: 0;
+      box-sizing: border-box;
+      width: 200%;
+      height: 200%;
+      transform: scale(0.5);
+      transform-origin: left top;
+      border: 1px solid $borderColor;
+      border-radius: $borderRadius;
+    }
+  }
