添加面包图标

--- a/src/views/mobile/Mall/shopping/shopList.scss
+++ b/src/views/mobile/Mall/shopping/shopList.scss
@@ -77,12 +77,23 @@
     // left: 0;
     // width: 100%;
     background-color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    .bread{
+      text-align: center;
+      width: 1.06rem;
+      border-left: 0.02rem solid #e8e8e8;
+      span{
+        font-size: 0.46rem;
+      }
+    }
   }
   .shop_tab{
-    margin: auto;
+    // margin: auto;
     display: flex;
     justify-content: flex-start;
-    width: 6.9rem;
+    width: 6.14rem;
     overflow-x: scroll;
     &::-webkit-scrollbar {display:none}
     .s-tab{
