--- a/src/views/mobile/Mall/shopping/shopList.scss
+++ b/src/views/mobile/Mall/shopping/shopList.scss
@@ -91,6 +91,7 @@
   }
   .shop_tab{
     // margin: auto;
+    position: relative;
     display: flex;
     justify-content: flex-start;
     width: 6.14rem;
