--- a/src/assets/scss/component/_richtext.scss
+++ b/src/assets/scss/component/_richtext.scss
@@ -38,7 +38,7 @@
       color: rgb(68, 68, 68);
     }
     h4 {
-      margin: -0.15rem 0 0.4rem;
+      margin: -0.15rem 0.3rem 0.4rem;
       font-size: 0.26rem;
       line-height: 150%;
       color:#999;
