--- a/src/views/mobile/Mall/shopping/shopList.scss
+++ b/src/views/mobile/Mall/shopping/shopList.scss
@@ -83,7 +83,7 @@
     .bread{
       text-align: center;
       width: 1.06rem;
-      border-left: 0.02rem solid #e8e8e8;
+      border-left: 0.02rem solid $borderColor;
       span{
         font-size: 0.46rem;
         color: #222;
