三级类目暂定

--- a/src/views/mobile/Mall/shopping/shopList.scss
+++ b/src/views/mobile/Mall/shopping/shopList.scss
@@ -89,6 +89,52 @@
       }
     }
   }
+  .tab2-box{
+    z-index: 1000;
+    display: flex;
+    justify-content: space-between;
+    padding: 0.2rem 0;
+    height: 0.4rem;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    margin-top: 1.96rem;
+    background-color: #fff;
+    border-top: 1px solid #e8e8e8;
+    border-bottom: 1px solid #e8e8e8;
+    color: #777;
+    .tab-cate{
+      width: 3.745rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      span{
+        line-height: 0.4rem;
+        font-size: 0.3rem;
+      }
+      .iconfont{
+        margin-left: 0.12rem;
+        font-size: 0.12rem;
+      }
+    }
+    .tab-cate1{
+      border-right: 1px solid #E8E8E8;
+    }
+    .hight{
+      color: #0072DD;
+    }
+  }
+  .screen{
+    z-index: 999;
+    position: fixed;
+    top: 2.78rem;
+    width: 100%;
+    height: calc(100vh - 2.76rem);
+    background-color: rgba($color: #000000, $alpha: 0.3);
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
+    &::-webkit-scrollbar {display:none}
+  }
   .shop_tab{
     // margin: auto;
     position: relative;
@@ -114,12 +160,12 @@
     }
     .active{
       text-align: center;
-      color: #444444;
+      color: #0072DD;
       .botline{
         display: block;
         width: calc(100% - 0.08rem);
         padding: 0.02rem 0;
-        background-color: #444;
+        background-color: #0072DD;
         border-radius: 30px;
         margin: auto;
       }
@@ -129,10 +175,10 @@
     clear: both;
   }
   .cate_now{
-    padding-top: 1.76rem;
+    padding-top: 2.76rem;
   }
   ul{
-    margin-top: 1.76rem;
+    margin-top: 2.76rem;
     width: 6.9rem;
     height: 100%;
     padding: 0.29rem 0.3rem 0rem 0.3rem;
