--- a/src/views/mobile/Mall/shopping/shopList.scss
+++ b/src/views/mobile/Mall/shopping/shopList.scss
@@ -97,7 +97,7 @@
     height: 0.4rem;
     position: fixed;
     top: 0;
-    width: 100%;
+    width: 7.5rem;
     margin-top: 1.96rem;
     background-color: #fff;
     border-top: 1px solid #e8e8e8;
@@ -113,7 +113,7 @@
         font-size: 0.3rem;
       }
       .iconfont{
-        margin-left: 0.12rem;
+        // margin-left: 0.12rem;
         font-size: 0.12rem;
       }
       &:first-of-type{
@@ -125,10 +125,11 @@
     }
   }
   .screen{
+    box-sizing: border-box;
     z-index: 999;
     position: fixed;
     top: 2.78rem;
-    width: 100%;
+    width: 7.5rem;
     height: calc(100vh - 2.76rem);
     background-color: rgba($color: #000000, $alpha: 0.3);
     overflow-y: scroll;
