--- a/src/views/mobile/Mall/shopping/shopList.scss
+++ b/src/views/mobile/Mall/shopping/shopList.scss
@@ -79,10 +79,15 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
+    .bread-box{
+      width: 1.06rem;
+    }
     .bread{
       text-align: center;
-      width: 1.06rem;
+      width: 0.92rem;
       border-left: 0.02rem solid $borderColor;
+      margin-top: 0.1rem;
+      margin-left: 0.12rem;
       span{
         font-size: 0.46rem;
         color: #222;
@@ -98,7 +103,7 @@
     position: fixed;
     top: 0;
     width: 7.5rem;
-    margin-top: 1.96rem;
+    margin-top: 1.72rem;
     background-color: #fff;
     border-top: 1px solid #e8e8e8;
     border-bottom: 1px solid #e8e8e8;
@@ -128,9 +133,9 @@
     box-sizing: border-box;
     z-index: 999;
     position: fixed;
-    top: 2.78rem;
+    top: 2.55rem;
     width: 7.5rem;
-    height: calc(100vh - 2.76rem);
+    height: calc(100vh - 2.53rem);
     background-color: rgba($color: #000000, $alpha: 0.3);
     overflow-y: scroll;
     -webkit-overflow-scrolling: touch;
@@ -146,7 +151,7 @@
     -webkit-overflow-scrolling: touch;
     &::-webkit-scrollbar {display:none}
     .s-tab{
-      padding: 0.3rem 0 0.1rem 0;
+      padding: 0.22rem 0 0.1rem 0;
       margin-right: 0.4rem;
       font-size: 0.34rem;
       color: #777777;
@@ -156,7 +161,7 @@
         margin-right: 0;
       }
       .con{
-        margin-bottom: 0.2rem;
+        margin-bottom: 0.03rem;
       }
     }
     .active{
@@ -179,7 +184,7 @@
     padding-top: 2.76rem;
   }
   ul{
-    margin-top: 2.76rem;
+    margin-top: 2.55rem;
     width: 6.9rem;
     height: 100%;
     padding: 0.29rem 0.3rem 0rem 0.3rem;
