--- a/src/views/mobile/Mall/shopping/shopList.scss
+++ b/src/views/mobile/Mall/shopping/shopList.scss
@@ -105,8 +105,8 @@
     width: 7.5rem;
     margin-top: 1.72rem;
     background-color: #fff;
-    border-top: 1px solid #e8e8e8;
-    border-bottom: 1px solid #e8e8e8;
+    border-top: 0.01rem solid #e8e8e8;
+    border-bottom: 0.01rem solid #e8e8e8;
     color: #777;
     .tab-cate{
       width: 3.745rem;
@@ -181,7 +181,7 @@
     clear: both;
   }
   .cate_now{
-    padding-top: 2.76rem;
+    padding-top: 2.55rem;
   }
   ul{
     margin-top: 2.55rem;
